Criação da comunicação entre pai e filho

--- a/AngularTypeScript-main/src/app/consultor/consultor.component.html
+++ b/AngularTypeScript-main/src/app/consultor/consultor.component.html
@@ -1,6 +1,6 @@
 <section class='consultor-card'>
   <div class="consultor-imagem">
-    <img src="" alt="" srcset="">
+    <img src="https://img.freepik.com/vetores-premium/ilustracao-em-vetor-de-foto-de-perfil-de-avatar-de-homem_268834-538.jpg?semt=ais_hybrid&w=740&q=80" alt="" srcset="">
   </div>
     <h2>{{Consultor.nome}}</h2>
     <div class="consultor-details">
