--- a/AngularTypeScript-main/src/app/consultor/consultor.component.scss
+++ b/AngularTypeScript-main/src/app/consultor/consultor.component.scss
@@ -18,8 +18,13 @@
     width: 6vw;
     height: 11vh;
     border-radius: 50%;
-    border: 1px solid;
+    border: 1px solid #ddd;
     position: relative;
     margin-top: -60px;
-    background-color: black;
+}
+.consultor-imagem img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+
 }
