adicionado campo de ativo ou desativado no card de consultor

--- a/AngularTypeScript-main/src/app/consultor/consultor.component.html
+++ b/AngularTypeScript-main/src/app/consultor/consultor.component.html
@@ -6,5 +6,8 @@
     <div class="consultor-details">
       <p>{{Consultor.especialidade}}</p>
       <p>E-mail: {{Consultor.email}} </p>
+      <p>Ativo: {{ Consultor.ativo ? 'Ativo' : 'Desativado' }}</p>
     </div>
   </section>
+
+  
